@@ -23,13 +23,9 @@
 
 use FileHandle;
 
-my ($index, @t, $data, $internal, $out_type, $out);
+my ($index, @t, $data, $internal);
 
 ## The main parsing sub
-## Parameters are 
-## data: a HASH ref containing the data 
-## template : a filename or a ARRAY ref that contains the template
-## output : a Filedescriptor or a SCALAR ref for the output
 sub parse_tpl {
     my ($template, $output);
     ($data, $template, $output) = @_;
@@ -44,16 +40,8 @@ sub parse_tpl {
     my @old_mode = ($*, $/);
     ($*, $/) = (0, "\n");
 
-    my $old_desc;
-    
-    if (ref($output) eq 'SCALAR') {
-	$output_type = 'string';
-	$out = $output;
-    }else {
-	$output_type = 'desc';
-	$old_desc = select;
-	select $output;
-    }
+    my $old_desc = select;
+    select $output;
      
     ## Parses the HTML template
     ## Possible syntax of templates are 
@@ -64,22 +52,15 @@ sub parse_tpl {
     ## [INCLUDE file]
     ## [PARSE file]
 
-    if (ref($template) eq 'ARRAY') {
-	@t = @$template;
-	$index = -1;
-    }else { 
-	my $fh = new FileHandle $template;
+    my $fh = new FileHandle $template;
 
-	$index = -1;
-	@t = <$fh>;
-	close $fh;
-    }
+    $index = -1;
+    @t = <$fh>;
+    close $fh;
 
     &process(1);
 
-    if ($output_type eq 'desc') {
-	select $old_desc;
-    }
+    select $old_desc;
 
     ($*, $/) = @old_mode;
 
@@ -110,12 +91,7 @@ sub do_include {
 
     my $fh = new FileHandle $file;
 
-    if ($output_type eq 'desc') {
-	print <$fh>;
-    }else {
-	$$out .= sprintf <$fh>;
-    }
-
+    print <$fh>;
     close $fh;
 }
 
@@ -272,11 +248,7 @@ sub do_stopparse {
 
     while ($_ = $t[$index]) {
 	return if /\[\s*STARTPARSE\s*\]/i;
-	if ($output_type eq 'desc') {
-	    print;
-	}else {
-	    $$out .= sprintf $_;
-	}
+	print;
 	$index++;
     }
     return;
@@ -321,11 +293,7 @@ sub process {
 	    &do_setvar($echo);
 	}elsif ($echo == 1) {
 	    &do_parse();
-	    if ($output_type eq 'desc') {
-		print;
-	    }else {
-		$$out .= sprintf $_;
-	    }
+	    print;
 	}
     }
     return;
